force-app/main/default/objects/Guru__c.object
<CustomObject>
    <fields>
        <fullName>Completed__c</fullName>
        <label>Completed</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GuruId__c</fullName>
        <label>GuruId</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Shishyas__c</fullName>
        <label>No of Shishyas</label>
        <summaryForeignKey>Shishya__c.GuruShishya__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Shishya_Status__c</fullName>
        <label>Shishya Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>School</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
                <value>
                    <fullName>Post Graduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Guru</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Shishya_Status__c</columns>
        <columns>Completed__c</columns>
        <columns>No_of_Shishyas__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Teacher Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guru</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>